# locomotive-control-system

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: autoloader.c  autoloader.h  logger.c  logger.h  module.h  modules_menu.c  modules_menu.h  translator.c  translator.h  user_interface.c  user_interface.h
logs/: .gitignore
modules/: brake.c  brake.h  compressor_unit.c  compressor_unit.h  traction_control.c  traction_control.h
translations/: english.txt  french.txt  spanish.txt
